--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -15,6 +15,14 @@
         <div class="text-center">
             <input type="submit" class="btn btn-primary" value="Login">
         </div>
+        <br>
+        {%if credentials=="false"%}
+          <div class="alert alert-danger" role="alert">
+            {{msg}}
+          </div>
+            
+        {%endif%}
+        
     </form>
 </div>
 {% endblock %}
