--- a/templates/influencer_registration.html
+++ b/templates/influencer_registration.html
@@ -13,6 +13,26 @@
             <input type="password" id="password" name="password" class="form-control" required>
         </div>
         <div class="form-group">
+            <label for="full_name">Full Name</label>
+            <input type="text" id="full_name" name="full_name" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="niche">Niche</label>
+            <select id="niche" name="niche" class="form-control" required>
+                <option selected>None</option>
+                <option value="Technology">Technology</option>
+                <option value="Fashion">Fashion</option>
+                <option value="Food & Beverage">Food & Beverage</option>
+                <option value="Health & Wellness">Health & Wellness</option>
+                <option value="Travel">Travel</option>
+                <option value="Entertainment">Entertainment</option>
+            </select>
+        </div>
+        <div class="form-group">
             <label for="platforms">Social Media Platforms (Select all that apply)</label>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="youtube" name="social_media" value="YouTube">
@@ -31,9 +51,14 @@
                 <label class="form-check-label" for="instagram">Instagram</label>
             </div>
         </div>
+        <div class="form-group">
+            <label for="reach">Reach (Number of Followers)</label>
+            <input type="number" id="reach" name="reach" class="form-control" required>
+        </div>
         <div class="text-center">
             <input type="submit" class="btn btn-primary" value="Register">
         </div>
     </form>
+    {{msg}}
 </div>
 {% endblock %}
