--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -13,38 +13,34 @@
     <form method="POST" class="mt-4" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" class="form-control" required>
+            <input type="text" id="name" name="name" class="form-control" value="{{ name }}" required>
         </div>
         <div class="form-group">
             <label for="image">Profile Image</label>
-            <input type="file" id="image" name="image" class="form-control-file" required>
+            <input type="file" id="image" name="image" class="form-control-file">
+            {% if profile_image %}
+                <div class="mt-2">
+                    <img src="{{ profile_image }}" alt="Profile Image" class="img-fluid rounded-circle" style="max-width: 150px;">
+                </div>
+            {% endif %}
         </div>
         <div class="form-group">
             <label for="niche">Niche</label>
-            <input type="text" id="niche" name="niche" class="form-control" required>
+            <input type="text" id="niche" name="niche" class="form-control" value="{{ niche }}" required>
         </div>
         <div class="form-group">
             <label for="platforms">Social Media Platforms (Select all that apply)</label>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="youtube" name="platforms" value="YouTube">
-                <label class="form-check-label" for="youtube">YouTube</label>
-            </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="facebook" name="platforms" value="Facebook">
-                <label class="form-check-label" for="facebook">Facebook</label>
-            </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="twitter" name="platforms" value="Twitter">
-                <label class="form-check-label" for="twitter">Twitter</label>
-            </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="instagram" name="platforms" value="Instagram">
-                <label class="form-check-label" for="instagram">Instagram</label>
-            </div>
+            {% for platform in ['YouTube', 'Facebook', 'Twitter', 'Instagram'] %}
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="{{ platform }}" name="platforms" value="{{ platform }}"
+                           {% if platform in social_media_platforms %}checked{% endif %}>
+                    <label class="form-check-label" for="{{ platform }}">{{ platform }}</label>
+                </div>
+            {% endfor %}
         </div>
         <div class="form-group">
             <label for="reach">Reach</label>
-            <input type="text" id="reach" name="reach" class="form-control" required>
+            <input type="text" id="reach" name="reach" class="form-control" value="{{ reach }}" required>
         </div>
         <div class="text-center">
             <input type="submit" class="btn btn-primary" value="Update">
