--- a/templates/influencer_campaigns.html
+++ b/templates/influencer_campaigns.html
@@ -18,11 +18,11 @@
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('influencer_dashboard', username=username) }}">Profile</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('influencer_campaigns', username=username) }}">Campaigns</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('active_campaigns', username=username) }}">Active Campaigns</a>
+              </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Ad Requests</a>
             </li>
