--- a/templates/sponsor_dashboard.html
+++ b/templates/sponsor_dashboard.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="/sponsor_influencers/{{ username }}">Influencers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Ad Requests</a>
+                <a class="nav-link" href="/sponsor_ad_requests/{{ username }}">Ad Requests</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
